--- a/index.html
+++ b/index.html
@@ -3,40 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <title>📋 투두리스트</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
-  <body class="bg-image">
-    <div class="container">
-      <h1>Todo List</h1>
-      <section class="input-area">
-        <input type="text" id="task-input" />
-        <button id="add-button">+</button>
-      </section>
-
-      <section class="task-area">
-        <div class="task-tabs">
-          <div id="under-line"></div>
-          <div>모두</div>
-          <div>진행중</div>
-          <div>끝남</div>
-        </div>
-        <div id="task-board"></div>
-      </section>
+  <body>
+    <div class="header">
+      <div class="header_changeBG">
+        <p>change <br />background</p>
+      </div>
+      <div class="header_todo">
+        <p id="change">Todo List</p>
+      </div>
+      <div class="header_reset">
+        <p id="reset">reset</p>
+      </div>
+      <div class="blank"></div>
+      <div class="header_weather">
+        <div id="location"></div>
+        <div id="temperature"></div>
+        <div id="condition"></div>
+      </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/background.js"></script>
-    <script src="js/main.js"></script>
+    <form class="hide" id="login-form">
+      <input type="text" placeholder="이름을 입력하세요." />
+      <button>로그인</button>
+    </form>
+    <div id="clock">
+      <div id="dataPrint">
+        <span></span>
+      </div>
+      <div id="timePrint">
+        <span></span>
+      </div>
+    </div>
+    <h1 id="greeting" class="hide"></h1>
+
+    <main class="hide">
+      <div class="main_todo">
+        <div class="main_title">
+          <h1>📋 투두리스트</h1>
+        </div>
+        <div id="State">
+          <div class="state_all">전체<span class="all_text">0</span></div>
+          <div class="state_done">완료<span class="done_text">0</span></div>
+          <div class="state_left">진행<span class="left_text">0</span></div>
+        </div>
+        <div class="main_todo_form">
+          <form id="todo-form">
+            <input type="text" placeholder="할일을 입력하세요." />
+            <button>Add</button>
+          </form>
+        </div>
+        <div class="main_todo_list">
+          <ul id="todo-list"></ul>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
+    </footer>
+    <script src="js/changeBG.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quote.js"></script>
+    <script src="js/todolist.js"></script>
+    <script src="js/greeting.js"></script>
+    <script src="js/allReset.js"></script>
   </body>
 </html>
