필터 기능 활용git add .

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <form class="hide" id="login-form">
       <input type="text" placeholder="이름을 입력하세요." />
-      <button>로그인</button>
+      <button type="submit">로그인</button>
     </form>
     <div id="clock">
       <div id="dataPrint">
@@ -52,7 +52,7 @@
         <div class="main_todo_form">
           <form id="todo-form">
             <input type="text" placeholder="할일을 입력하세요." />
-            <button>Add</button>
+            <button type="submit">Add</button>
           </form>
         </div>
         <div class="main_todo_list">
