--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>📋 투두리스트</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -16,6 +24,9 @@
       </div>
       <div class="header_reset">
         <p id="reset">reset</p>
+      </div>
+      <div class="header_music">
+        <p id="music">Music Player</p>
       </div>
       <div class="blank"></div>
       <div class="header_weather">
@@ -40,7 +51,7 @@
     </div>
     <h1 id="greeting" class="hide"></h1>
 
-    <main class="hide">
+    <main class="hide" id="main_todo_h">
       <div class="main_todo">
         <div class="main_title">
           <h1>📋 투두리스트</h1>
@@ -61,6 +72,77 @@
         </div>
       </div>
     </main>
+
+    <main class="hide" id="main_music_h">
+      <div class="wrap__music">
+        <div class="music__inner">
+          <div class="music__top">
+            <i class="material-icons">expand_more</i>
+            <h3>Now Playing</h3>
+            <i class="material-icons">more_horiz</i>
+          </div>
+          <!-- // music__top -->
+          <div class="music__img">
+            <img src="images/music-1.jpg" alt="이미지1" />
+          </div>
+          <!-- // music__img -->
+          <div class="music__song">
+            <p class="name"></p>
+            <p class="artist"></p>
+          </div>
+          <!-- // music__song -->
+          <div class="music__progress">
+            <div class="bar">
+              <audio id="main-audio" src=""></audio>
+            </div>
+            <div class="timer">
+              <span class="current">0:00</span>
+              <span class="duration">0:00</span>
+            </div>
+          </div>
+          <!-- // music__progress -->
+          <div class="music__control">
+            <i id="control-repeat" class="material-icons" title="전체 반복"
+              >repeat</i
+            >
+            <i id="control-prev" class="material-icons" title="이전곡"
+              >skip_previous</i
+            >
+            <div class="play-pause">
+              <i id="control-play" class="material-icons" title="재생"
+                >play_arrow</i
+              >
+              <!-- <i class="material-icons">pause</i> -->
+            </div>
+            <i id="control-next" class="material-icons" title="다음곡"
+              >skip_next</i
+            >
+            <i id="control-list" class="material-icons" title="재생목록"
+              >queue_music</i
+            >
+            <!-- <i class="material-icons">repeat_one</i>
+              <i class="material-icons">shuffle</i> -->
+          </div>
+          <!-- // music__control -->
+          <div class="music__list">
+            <div class="title">
+              <div>
+                <i class="material-icons queue">queue_music</i>
+                <span>Music List</span>
+              </div>
+              <i class="material-icons close">close</i>
+            </div>
+            <div class="list">
+              <ul>
+                <!-- Javascript -->
+              </ul>
+            </div>
+          </div>
+          <!-- // music__list -->
+        </div>
+      </div>
+    </main>
+
     <footer>
       <div id="quote">
         <span></span>
@@ -85,5 +167,7 @@
       - 날씨에 따라 아이콘 출력, 국가에 따라 국기 출력
     -->
     <script src="js/weather.js"></script>
+    <!-- mp3 플레이어 기능 -->
+    <script src="js/music.js"></script>
   </body>
 </html>
